--- a/src/Services/PanacheSoftware.Service.Task/appsettings.json
+++ b/src/Services/PanacheSoftware.Service.Task/appsettings.json
@@ -15,11 +15,13 @@
     "DBProvider": "MySQL",
     "StartDomain": "panachesoftware.com",
     "CallMethod": {
-      "APICallsSecure": "true",
-      "UICallsSecure": "true",
+      "APICallsSecure": "false",
+      "UICallsSecure": "false",
       "UseAPIGateway": "false"
     },
     "Url": {
+      "FileServiceURL": "http://localhost:55008",
+      "FileServiceURLSecure": "https://localhost:44308",
       "IdentityServerURL": "http://localhost:55002",
       "IdentityServerURLSecure": "https://localhost:44302",
       "TeamServiceURL": "http://localhost:55006",
