--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/appsettings.json
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
   "PanacheSoftware": {
     "CallMethod": {
-      "APICallsSecure": "true",
-      "UICallsSecure": "true",
+      "APICallsSecure": "false",
+      "UICallsSecure": "false",
       "UseAPIGateway": "false",
       "StartDomain": "panachesoftware.com"
     },
