--- a/src/Services/PanacheSoftware.Service.File/appsettings.json
+++ b/src/Services/PanacheSoftware.Service.File/appsettings.json
@@ -15,8 +15,8 @@
     "DBProvider": "MySQL",
     "StartDomain": "panachesoftware.com",
     "CallMethod": {
-      "APICallsSecure": "true",
-      "UICallsSecure": "true",
+      "APICallsSecure": "false",
+      "UICallsSecure": "false",
       "UseAPIGateway": "false"
     },
     "Url": {
