--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/PanacheSoftware.UI.Client.Blazor.csproj
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/PanacheSoftware.UI.Client.Blazor.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.4.7" />
+    <PackageReference Include="Blazorise.Charts" Version="0.9.4.7" />
     <PackageReference Include="Blazorise.Components" Version="0.9.4.7" />
     <PackageReference Include="Blazorise.DataGrid" Version="0.9.4.7" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.4.7" />
