--- a/src/API Gateway/PanacheSoftware.API.Gateway/PanacheSoftware.API.Gateway.csproj
+++ b/src/API Gateway/PanacheSoftware.API.Gateway/PanacheSoftware.API.Gateway.csproj
@@ -10,7 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
-    <PackageReference Include="Ocelot" Version="16.0.1" />
+    <PackageReference Include="Ocelot" Version="17.0.1" />
+    <PackageReference Include="Ocelot.Administration" Version="17.0.1" />
   </ItemGroup>
 
   <ItemGroup>
