--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/appsettings.json
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/appsettings.json
@@ -11,7 +11,7 @@
     "CallMethod": {
       "APICallsSecure": "false",
       "UICallsSecure": "false",
-      "UseAPIGateway": "false",
+      "UseAPIGateway": "true",
       "StartDomain": "panachesoftware.com"
     },
     "Url": {
