API Gateway is now back in usage.  Blazor UI will dynamically populate the routes on startup rather than them being hardcoded within ocelot.json.  Base config for Ocelot also moved from Ocelot.json to appsettings.json so that this can be configured within docker.

--- a/src/Core/PanacheSoftware.Http/PanacheSoftware.Http.csproj
+++ b/src/Core/PanacheSoftware.Http/PanacheSoftware.Http.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="IdentityModel" Version="4.4.0" />
     <PackageReference Include="CompareNETObjects" Version="4.67.0" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.11" />
+    <PackageReference Include="Microsoft.OpenApi" Version="1.2.3" />
+    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.2.3" />
   </ItemGroup>
 
   <ItemGroup>
