--- a/src/API Gateway/PanacheSoftware.API.Gateway/PanacheSoftware.API.Gateway.csproj
+++ b/src/API Gateway/PanacheSoftware.API.Gateway/PanacheSoftware.API.Gateway.csproj
@@ -6,10 +6,12 @@
     <AssemblyVersion>0.1.*</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
     <Version>0.1.0.0</Version>
+    <UserSecretsId>3fef5485-d65e-4577-adb6-8b37a622778f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Ocelot" Version="17.0.1" />
     <PackageReference Include="Ocelot.Administration" Version="17.0.1" />
   </ItemGroup>
