--- a/src/API Gateway/PanacheSoftware.API.Gateway/Properties/launchSettings.json
+++ b/src/API Gateway/PanacheSoftware.API.Gateway/Properties/launchSettings.json
@@ -7,19 +7,18 @@
       "sslPort": 44303
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchUrl": "weatherforecast",
+      "launchBrowser": false,
+      "launchUrl": "http://localhost:55003/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "PanacheSoftware.API.Gateway": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
