Adding document automation functionality.  Includes adding shortnames to tasks and templates along and auto setting these.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/appsettings.json
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/appsettings.json
@@ -32,7 +32,9 @@
       "TeamServiceURL": "http://localhost:55006",
       "TeamServiceURLSecure": "https://localhost:44306",
       "CustomFieldServiceURL": "http://localhost:55009",
-      "CustomFieldServiceURLSecure": "https://localhost:44309"
+      "CustomFieldServiceURLSecure": "https://localhost:44309",
+      "AutomationServiceURL": "http://localhost:55010",
+      "AutomationServiceURLSecure": "https://localhost:44310"
     },
     "Secret": {
       "UIClientSecret": "49C1A7E1-0C79-4A89-A3D6-A37998FB86B0"
