Fixed issue where incorrect shortname was used when creating tasks from a template which would lead to a duplicate name error.
Prevent task group id being added to document automation tag for custom field groups attached to the parent task.

--- a/src/Services/PanacheSoftware.Service.Automation/Dockerfile
+++ b/src/Services/PanacheSoftware.Service.Automation/Dockerfile
@@ -1,6 +1,7 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim-arm32v7 AS base
+#FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim-arm32v7 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
@@ -18,10 +19,10 @@ COPY ["Services/PanacheSoftware.Service.Automation/PanacheSoftware.Service.Autom
 RUN dotnet restore "Services/PanacheSoftware.Service.Automation/PanacheSoftware.Service.Automation.csproj"
 COPY . .
 WORKDIR "/src/Services/PanacheSoftware.Service.Automation"
-RUN dotnet build "PanacheSoftware.Service.Automation.csproj" -c Release -o /app/build -r linux-arm
+RUN dotnet build "PanacheSoftware.Service.Automation.csproj" -c Release -o /app/build #-r linux-arm
 
 FROM build AS publish
-RUN dotnet publish "PanacheSoftware.Service.Automation.csproj" -c Release -o /app/publish -r linux-arm --self-contained false --no-restore
+RUN dotnet publish "PanacheSoftware.Service.Automation.csproj" -c Release -o /app/publish --no-restore #-r linux-arm --self-contained false --no-restore
 
 FROM base AS final
 WORKDIR /app
