--- a/src/Services/PanacheSoftware.Service.Task/appsettings.json
+++ b/src/Services/PanacheSoftware.Service.Task/appsettings.json
@@ -25,7 +25,7 @@
       //"FileServiceURL": "http://localhost:55008",
       //"FileServiceURLSecure": "https://localhost:44308",
       "IdentityServerURL": "http://localhost:55002",
-      "IdentityServerURLSecure": "https://localhost:44302",
+      "IdentityServerURLSecure": "https://localhost:44302"
       //"TeamServiceURL": "http://localhost:55006",
       //"TeamServiceURLSecure": "https://localhost:44306"
     },
